--- a/catalog.html
+++ b/catalog.html
@@ -8,74 +8,76 @@
 </head>
 
 <body>
-    <header class="main-header">
+  <header class="main-header">
+    <div class="container">
+      <img src="#" width="#" height="#" alt="Логотип Nёrd's">
         <nav class="main-navigation">
-            <img src="#" width="#" height="#" alt="Логотип Nёrd's">
-            <ul class="site-navigation">
-              <li> <a href="#">Студия</a> </li>
-              <li> <a href="#">Клиенты</a> </li>
-              <li> <a href="#">Магазин</a> </li>
-              <li> <a href="#">Контакты</a> </li>
+          <ul class="site-navigation">
+            <li> <a href="#">Студия</a> </li>
+            <li> <a href="#">Клиенты</a> </li>
+            <li> <a href="#">Магазин</a> </li>
+            <li> <a href="#">Контакты</a> </li>
             </ul>
-            <ul class="main-navigation-bin">
-              <li> <a href="#">Корзина</a> </li>
-            </ul>
+          <ul class="main-navigation-bin">
+            <li> <a href="#">Корзина</a> </li>
+          </ul>
         </nav>
-        <h1>Магазин готовых шаблонов</h1>
-    </header>
+      <p> <b>Магазин готовых шаблонов</b> </p>
+    </div>  
+  </header>
 
-  <main class="container">
+  <main>
     <!-- <section class="filter">
      Здесь будет фильтр
     </section> -->
 
     <section class="gallery">
-      <ul class="gallery-list">
-        <li class="gallery-item"> <img src="#" alt="sedona"> </li>
-        <li class="gallery-item"> <img src="#" alt="pink"> </li>
-        <li class="gallery-item"> <img src="#" alt="Borodinsky"> </li>
-        <li class="gallery-item"> <img src="#" alt="Mishka"> </li>
-        <li class="gallery-item"> <img src="#" alt="A plus"> </li>
-        <li class="gallery-item"> <img src="№" alt="Кваст"> </li>
-      </ul>
-
-      <nav class="gallery-navigation">
-        <ul class="gallery-nav-list">
-          <li class="gallery-nav-item"> <a href="#">1</a> </li>
-          <li class="gallery-nav-item"> <a href="#">2</a> </li>
-          <li class="gallery-nav-item"> <a href="#">3</a> </li>
-          <li class="gallery-nav-item"> <a href="#">Следующая</a> </li>
+      <div class=container>
+        <ul class="gallery-list">
+          <li class="gallery-item"> <img src="#" alt="sedona"> </li>
+          <li class="gallery-item"> <img src="#" alt="pink"> </li>
+          <li class="gallery-item"> <img src="#" alt="Borodinsky"> </li>
+          <li class="gallery-item"> <img src="#" alt="Mishka"> </li>
+          <li class="gallery-item"> <img src="#" alt="A plus"> </li>
+          <li class="gallery-item"> <img src="#" alt="Кваст"> </li>
         </ul>
-      </nav>
+        <nav class="gallery-navigation">
+          <ul class="gallery-nav-list">
+            <li class="gallery-nav-item"> <a href="#">1</a> </li>
+            <li class="gallery-nav-item"> <a href="#">2</a> </li>
+            <li class="gallery-nav-item"> <a href="#">3</a> </li>
+            <li class="gallery-nav-item"> <a href="#">Следующая</a> </li>
+          </ul>
+        </nav>
+      </div>
     </section>
+
+    <section class="map">
+      <img src="#" alt="Карта с месторасположением Нёрдс" width="500" height="200">
+      <div class="contacts">
+        <p class="name"> <b>NЁRDS DESIGN STUDIO</b> </p>
+        <address>191186, Санкт-Петербург,<br>
+          ул. Б. Конюшенная, д. 19/8</address>
+        
+          <p class="telephone"> тел.+7(812) 275-75-75</p>
+            <a href="#" class="letter-us-red">Напишите нам</a>
+        </div>
+      </section>
   </main>
 
   <footer class="main-footer">
-      <section class="map">
-          <figure class="map-image">
-            <img src="#" alt="Карта с месторасположением Нёрдс" width="500" height="200">
-          </figure>
-          <div class="contacts">
-              <span class="contact-details">
-              <b>NЁRDS DESIGN STUDIO</b> <br>
-              191186, Санкт-Петербург,<br>
-              ул. Б. Конюшенная, д. 19/8<br>
-              +7(812) 275-75-75<br>
-              </span>
-              <button type="button" class="map-btn-red">Напишите нам</button>
-          </div>
-        </section>
-             
+    <div class="container">             
       <ul class="footer-social-list">
         <li class="social-list-item"> <a href="#">Vkontakte</a> </li>
         <li class="social-list-item"> <a href="#">facebook</a> </li>
         <li class="social-list-item"> <a href="#">Instagramm</a> </li>  
       </ul>
-
-      <div class="footer-promo">
-      <p> <b>Давайте дружить, это выгодно!</b> </p>
-      <p>Скидка 10% для друзей из сациальных сетей.</p>
-      </div>
+  
+      <span class="footer-promo">
+        <p> <b>Давайте дружить, это выгодно!</b> </p>
+        <p>Скидка 10% для друзей из сациальных сетей.</p>
+      </span>
+    </div>
   </footer>
 </body>
 </html>
