--- a/catalog.html
+++ b/catalog.html
@@ -10,40 +10,45 @@
 <body>
   <header class="main-header">
     <div class="container">
-      <img src="#" width="#" height="#" alt="Логотип Nёrd's">
+      <a class="main-header-logo" href="#"> <img src="#" width="#" height="#" alt="Логотип Nёrd's"> </a>
         <nav class="main-navigation">
           <ul class="site-navigation">
             <li> <a href="#">Студия</a> </li>
             <li> <a href="#">Клиенты</a> </li>
-            <li> <a href="#">Магазин</a> </li>
+            <li class="site-navigation-current"> <a href="#">Магазин</a> </li>
             <li> <a href="#">Контакты</a> </li>
             </ul>
           <ul class="main-navigation-bin">
             <li> <a href="#">Корзина</a> </li>
           </ul>
         </nav>
-      <p> <b>Магазин готовых шаблонов</b> </p>
     </div>  
   </header>
 
   <main>
-    <!-- <section class="filter">
-     Здесь будет фильтр
-    </section> -->
+    <section class="title"> 
+      <div class="container" 
+      <h1>Магазин готовыцх шаблонов</h1> 
+      </div> 
+    </section>
 
-    <section class="gallery">
-      <div class=container>
+    <section class="filter-and-gallery">
+      <div class="container">
+        <h2 class="visually-hidden">Фильтр услуг</h2>
+        <!-- Здесь будет форма -->
+
+        <h2 class="visually-hidden">Карточки услуг</h2>
         <ul class="gallery-list">
-          <li class="gallery-item"> <img src="#" alt="sedona"> </li>
-          <li class="gallery-item"> <img src="#" alt="pink"> </li>
-          <li class="gallery-item"> <img src="#" alt="Borodinsky"> </li>
-          <li class="gallery-item"> <img src="#" alt="Mishka"> </li>
-          <li class="gallery-item"> <img src="#" alt="A plus"> </li>
-          <li class="gallery-item"> <img src="#" alt="Кваст"> </li>
+          <li class="gallery-item"> <figure> <img src="#" width="360" height="576" alt="sedona"> </figure> </li>
+          <li class="gallery-item"> <figure> <img src="#" width="360" height="576" alt="pink"> </figure> </li>
+          <li class="gallery-item"> <figure> <img src="#" width="360" height="576" alt="Borodinsky"> </figure> </li>
+          <li class="gallery-item"> <figure> <img src="#" width="360" height="576" alt="Mishka"> </figure> </li>
+          <li class="gallery-item"> <figure> <img src="#" width="360" height="576" alt="A plus"> </figure> </li>
+          <li class="gallery-item"> <figure> <img src="#" width="360" height="576" alt="Кваст"> </figure> </li>
         </ul>
         <nav class="gallery-navigation">
           <ul class="gallery-nav-list">
-            <li class="gallery-nav-item"> <a href="#">1</a> </li>
+            <li class="gallery-nav-item gallery-nav-item-current"> <a href="#">1</a> </li>
             <li class="gallery-nav-item"> <a href="#">2</a> </li>
             <li class="gallery-nav-item"> <a href="#">3</a> </li>
             <li class="gallery-nav-item"> <a href="#">Следующая</a> </li>
@@ -53,16 +58,16 @@
     </section>
 
     <section class="map">
-      <img src="#" alt="Карта с месторасположением Нёрдс" width="500" height="200">
-      <div class="contacts">
-        <p class="name"> <b>NЁRDS DESIGN STUDIO</b> </p>
-        <address>191186, Санкт-Петербург,<br>
+      <figure> <img src="#" alt="Карта с месторасположением Нёрдс" width="1440" height="416">
+        <div class="contacts">
+          <p class="name"> <b>NЁRDS DESIGN STUDIO</b> </p>
+          <address>191186, Санкт-Петербург,<br>
           ул. Б. Конюшенная, д. 19/8</address>
-        
           <p class="telephone"> тел.+7(812) 275-75-75</p>
-            <a href="#" class="letter-us-red">Напишите нам</a>
+          <a href="#" class="letter-us-red">Напишите нам</a>
         </div>
-      </section>
+      </figure>
+    </section>
   </main>
 
   <footer class="main-footer">
@@ -73,10 +78,10 @@
         <li class="social-list-item"> <a href="#">Instagramm</a> </li>  
       </ul>
   
-      <span class="footer-promo">
+      <div class="footer-promo">
         <p> <b>Давайте дружить, это выгодно!</b> </p>
         <p>Скидка 10% для друзей из сациальных сетей.</p>
-      </span>
+      </div>
     </div>
   </footer>
 </body>
