--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header class="main-header">
     <div class="container">
-      <img src="#" width="#" height="#" alt="Логотип Nёrd's">
+      <a class="main-header-logo"> <img src="#" width="#" height="#" alt="Логотип Nёrd's"> </a>
         <nav class="main-navigation">
           <ul class="site-navigation">
             <li> <a href="#">Студия</a> </li>
@@ -23,8 +23,28 @@
           </ul>
         </nav>
     </div>
-    <!-- <section class="slider"> Здесь будет слайлер
-    </section> -->
+    <section class="slider"> 
+      <div class="container">
+        <ul class="sliders-list">
+          <li class="slider-item">
+            <h2>Долго, дорого, скураулезно.</h2>
+            <p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
+            <button type="buttom">узнать больще</button>
+          </li>
+          <li class="slider-item">
+              <h2>Любим математику как никто другой.</h2>
+              <p>Никакого креатива, только математические формулы для расчета идеальных пропорций</p>
+              <button type="buttom">узнать больще</button>
+            </li>
+          <li class="slider-item">
+              <h2>Только ночь, только хардкор.</h2>
+              <p>Работать днем, как все? Мы против этого. <br>
+                Ближе к полуночи работа тольк начинается </p>
+              <button type="buttom">узнать больще</button>
+          </li>
+        </ul>
+      </div>
+    </section>
   </header>
 
   <main>
@@ -35,7 +55,7 @@
       <h2 class="visually-hidden">Перечень услуг по разработке</h2>
         <ul class="services-list">
           <li class="services-item">
-            <figure> <img src="#" alt="Веб-Сайты" width="300" height="146"> </figure>
+            <figure> <img src="" alt="Веб-Сайты" width="300" height="146"> </figure>
             <h3>Веб-сайты</h3>
             <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
             <a href="#" class="services-item-order-red">Заказать</a>
@@ -70,7 +90,7 @@
         </div>
       
         <div class="advantages-info">
-          <img src="#" alt="Красочный логотип Нёрдс" width="300" height="146">
+          <a> <img src="#" alt="Красочный логотип Нёрдс" width="300" height="146"></a>
           <p class="table-title"> <b>С 2004 года любим точность во всем:</b> </p> 
           <table>
             <tr>
@@ -91,23 +111,24 @@
     <article class="partners">
       <div class="container">
         <ul class="partners-list">
-          <li> <a href="html"> <img src="#" alt=""> </a> </li>
-          <li> <a href="borodinski"> <img src="#" alt=""> </a> </li>
-          <li> <a href="pink"> <img src="#" alt=""> </a> </li>
-          <li> <a href="mishka"> <img src="#" alt=""> </a> </li>
+          <li> <a href="html"> <img src="#" alt="логотип-html-academy" width="199" height="68"> </a> </li>
+          <li> <a href="borodinski"> <img src="#" alt="логотип-barbershop-borodinski" width="209" height="87"> </a> </li>
+          <li> <a href="pink"> <img src="#" alt="логотип-pink" width="185" height="52"> </a> </li>
+          <li> <a href="mishka"> <img src="#" alt="логотип-mishka" width="173" height="84"> </a> </li>
         </ul>
       </div>
     </article>
 
     <section class="map">
-      <img src="#" alt="Карта с месторасположением Нёрдс" width="500" height="200">
-      <div class="contacts">
+      <figure> <img src="#" alt="Карта с месторасположением Нёрдс" width="1440" height="416">
+        <div class="contacts">
           <p class="name"> <b>NЁRDS DESIGN STUDIO</b> </p>
           <address>191186, Санкт-Петербург,<br>
           ул. Б. Конюшенная, д. 19/8</address>
           <p class="telephone"> тел.+7(812) 275-75-75</p>
           <a href="#" class="letter-us-red">Напишите нам</a>
-      </div>
+        </div>
+      </figure>
     </section>
   </main>
 
@@ -119,10 +140,10 @@
         <li class="social-list-item"> <a href="#">Instagramm</a> </li>  
       </ul>
 
-      <span class="footer-promo">
+      <div class="footer-promo">
         <p> <b>Давайте дружить, это выгодно!</b> </p>
         <p>Скидка 10% для друзей из сациальных сетей.</p>
-      </span>
+      </div>
     </div>
   </footer>
 </body>
