--- a/catalog.html
+++ b/catalog.html
@@ -29,39 +29,79 @@
 
   <main>
     <section class="title"> 
-      <div class="container" 
-      <h1>Магазин готовыцх шаблонов</h1> 
+      <div class="container"> 
+      <h1>Магазин готовых шаблонов</h1> 
       </div> 
     </section>
 
-    <section class="filter-and-gallery">
+    <section class="catalog">
       <div class="container">
         <h2 class="visually-hidden">Фильтр услуг</h2>
         <!-- Здесь будет форма -->
 
         <h2 class="visually-hidden">Карточки услуг</h2>
         <ul class="gallery-list">
-          <li class="gallery-item"> <figure> <img src="img\img-sedona.jpg" width="360" height="576" alt="sedona"> </figure> </li>
-          <li class="gallery-item"> <figure> <img src="img\img-pink.jpg" width="360" height="576" alt="pink"> </figure> </li>
-          <li class="gallery-item"> <figure> <img src="img\img-barbershop.jpg" width="360" height="576" alt="Borodinsky"> </figure> </li>
-          <li class="gallery-item"> <figure> <img src="img\img-mishka.jpg" width="360" height="576" alt="Mishka"> </figure> </li>
-          <li class="gallery-item"> <figure> <img src="img\img-aplus.jpg" width="360" height="576" alt="A plus"> </figure> </li>
-          <li class="gallery-item"> <figure> <img src="img\img-kvast.jpg" width="360" height="576" alt="Кваст"> </figure> </li>
+          <li class="gallery-item"> 
+            <figure> <img src="img/img-sedona.jpg" width="360" height="576" alt="sedona">
+              <figcaption class="visually-hidden">Макет сайта Sedona</figcaption> </figure> 
+            <div><h3>Sedona</h3>
+              <p>Информационный сайт для туристов</p>
+              <a href="#">9900 руб.</a>
+            </div>  
+          </li>
+          <li class="gallery-item"> 
+            <figure> <img src="img/img-pink.jpg" width="360" height="576" alt="pink"> 
+              <figcaption class="visually-hidden">Макет сайта Pink App</figcaption> </figure> 
+            <div><h3>Pink App</h3>
+              <p>Продуктовый лендинг приложения для iOS и Android</p>
+              <a href="#">9900 руб.</a> 
+            </div>
+          </li>
+          <li class="gallery-item"> 
+            <figure> <img src="img/img-barbershop.jpg" width="360" height="576" alt="Borodinsky"> 
+              <figcaption class="visually-hidden">Макет сайта Barbershop Borodinski</figcaption> </figure> 
+            <div><h3>Barbershop Borodinski</h3>
+              <p>Сайт салона красоты. Для мужчин, да.</p>
+              <a href="#">9900 руб.</a> 
+            </div>
+          </li>
+          <li class="gallery-item"> 
+            <figure> <img src="img/img-mishka.jpg" width="360" height="576" alt="Mishka"> 
+              <figcaption class="visually-hidden">Макет сайта Mishka</figcaption> </figure> 
+            <div><h3>Mishka</h3>
+              <p>Интернет-магазин вязаных игрушек</p>
+              <a href="#">9900 руб.</a> 
+            </div>
+          </li>
+          <li class="gallery-item"> <figure> <img src="img/img-aplus.jpg" width="360" height="576" alt="A plus"> 
+            <figcaption class="visually-hidden">Макет сайта A Plus</figcaption> </figure> 
+            <div><h3>A Plus</h3>
+              <p>Лендинг курсов повышения квалификации</p>
+              <a href="#">9900 руб.</a> 
+            </div>
+          </li>
+          <li class="gallery-item"> <figure> <img src="img/img-kvast.jpg" width="360" height="576" alt="Кваст"> 
+            <figcaption class="visually-hidden">Макет сайта Кваст</figcaption> </figure> 
+            <div><h3>Кваст</h3>
+              <p>Промо-сайт производителя крафтового кваса</p>
+              <a href="#">9900 руб.</a> 
+            </div>
+          </li>
         </ul>
-        <nav class="gallery-navigation">
-          <ul class="gallery-nav-list">
-            <li class="gallery-nav-item gallery-nav-item-current"> <a href="#">1</a> </li>
-            <li class="gallery-nav-item"> <a href="#">2</a> </li>
-            <li class="gallery-nav-item"> <a href="#">3</a> </li>
-            <li class="gallery-nav-item"> <a href="#">Следующая</a> </li>
+        <div class="gallery-pagination">
+          <ul class="gallery-pag-list">
+            <li class="gallery-pag-item gallery-pag-item-current"> <a href="#">1</a> </li>
+            <li class="gallery-pag-item"> <a href="#">2</a> </li>
+            <li class="gallery-pag-item"> <a href="#">3</a> </li>
+            <li class="gallery-pag-item"> <a href="#">Следующая</a> </li>
           </ul>
-        </nav>
+        </div>
       </div>
     </section>
 
     <section class="map">
-      <figure> <img src="img\Слой 2.jpg" alt="Карта с месторасположением Нёрдс" width="1440" height="416"> 
-      <img src="img\map-marker.jpg" alt="Местоположение Нердс" width="231" height="190"> 
+      <figure> <img src="img/Слой 2.jpg" alt="Карта с месторасположением Нёрдс" width="1440" height="416"> 
+      <img src="img/map-marker.jpg" alt="Местоположение Нердс" width="231" height="190"> 
       </figure>
         <div class="contacts">
           <p class="name"> <b>NЁRDS DESIGN STUDIO</b> </p>
