--- a/index.html
+++ b/index.html
@@ -31,18 +31,18 @@
           <li class="slider-item">
             <h2>Долго, дорого, скураулезно.</h2>
             <p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
-            <button type="buttom">узнать больще</button>
+            <a href="#">узнать больше</a>
           </li>
           <li class="slider-item">
               <h2>Любим математику как никто другой.</h2>
               <p>Никакого креатива, только математические формулы для расчета идеальных пропорций</p>
-              <button type="buttom">узнать больще</button>
+              <a href="#">узнать больше</a>
             </li>
           <li class="slider-item">
               <h2>Только ночь, только хардкор.</h2>
               <p>Работать днем, как все? Мы против этого. <br>
                 Ближе к полуночи работа тольк начинается </p>
-              <button type="buttom">узнать больще</button>
+                <a href="#">узнать больше</a>
           </li>
         </ul>
       </div>
@@ -50,26 +50,26 @@
   </header>
 
   <main>
-    <h1 class="visually-hidden">Веб-студия Nёrd's</h1>
+    <h2 class="visually-hidden">Веб-студия Nёrd's</h2>
 
     <section class="services">
       <div class=container>
       <h2 class="visually-hidden">Перечень услуг по разработке</h2>
         <ul class="services-list">
           <li class="services-item">
-            <figure> <img src="img\illustration-1.jpg" alt="Веб-Сайты" width="300" height="146"> </figure>
+            <figure> <img src="img/illustration-1.jpg" alt="Веб-Сайты" width="300" height="146"> </figure>
             <h3>Веб-сайты</h3>
             <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
             <a href="#" class="services-item-order-red">Заказать</a>
           </li>
           <li class="services-item">
-            <figure> <img src="img\illustration-2.jpg" alt="Приложения" width="300" height="146"> </figure>
+            <figure> <img src="img/illustration-2.jpg" alt="Приложения" width="300" height="146"> </figure>
             <h3>Приложения</h3>
             <p>Покорите топ-10 приложений а AppStore и Google Play</p>
             <a href="#" class="services-item-order-green">Заказать</a>
           </li>
           <li class="services-item">
-            <figure> <img src="img\illustration-3.jpg" alt="Презентации" width="300" height="146"> </figure>
+            <figure> <img src="img/illustration-3.jpg" alt="Презентации" width="300" height="146"> </figure>
             <h3>Презентации</h3>
             <p>Вы даже не подозреваете, насколько вы изумительны!</p>
             <a href="#" class="services-item-order-yellow">Заказать</a>
@@ -92,7 +92,7 @@
         </div>
       
         <div class="advantages-info">
-          <a> <img src="img\nerds-illustration.jpg" alt="Красочный логотип Нёрдс" width="300" height="146"></a>
+          <a> <img src="img/nerds-illustration.jpg" alt="Красочный логотип Нёрдс" width="300" height="146"></a>
           <p class="table-title"> <b>С 2004 года любим точность во всем:</b> </p> 
           <table>
             <tr>
@@ -110,20 +110,20 @@
       </div>
     </section>
 
-    <article class="partners">
+    <section class="partners">
       <div class="container">
         <ul class="partners-list">
-          <li> <a href="html"> <img src="img\logo-1.jpg" alt="логотип-html-academy" width="199" height="68"> </a> </li>
-          <li> <a href="borodinski"> <img src="img\logo-2.jpg" alt="логотип-barbershop-borodinski" width="209" height="87"> </a> </li>
-          <li> <a href="pink"> <img src="img\logo-3.jpg" alt="логотип-pink" width="185" height="52"> </a> </li>
-          <li> <a href="mishka"> <img src="img\logo-4.jpg" alt="логотип-mishka" width="173" height="84"> </a> </li>
+          <li> <a href="html"> <img src="img/logo-1.jpg" alt="логотип-html-academy" width="199" height="68"> </a> </li>
+          <li> <a href="borodinski"> <img src="img/logo-2.jpg" alt="логотип-barbershop-borodinski" width="209" height="87"> </a> </li>
+          <li> <a href="pink"> <img src="img/logo-3.jpg" alt="логотип-pink" width="185" height="52"> </a> </li>
+          <li> <a href="mishka"> <img src="img/logo-4.jpg" alt="логотип-mishka" width="173" height="84"> </a> </li>
         </ul>
       </div>
-    </article>
+    </section>
 
     <section class="map">
-      <figure> <img src="img\Слой 2.jpg" alt="Карта с месторасположением Нёрдс" width="1440" height="416"> 
-      <img src="img\map-marker.jpg" alt="Местоположение Нердс" width="231" height="190"> 
+      <figure> <img src="img/Слой 2.jpg" alt="Карта с месторасположением Нёрдс" width="1440" height="416"> 
+      <img src="img/map-marker.jpg" alt="Местоположение Нердс" width="231" height="190"> 
       </figure>
         <div class="contacts">
           <p class="name"> <b>NЁRDS DESIGN STUDIO</b> </p>
